--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase": "^4.12.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-toast-notification": "0.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
